# django-poetry-rest-api

./: .env.example  README.md  pyproject.toml
backend/: settings.py  urls.py
docs/: BASIC_POETRY_DJANGO_SETUP.md  DEPLOYMENT.md  DEPLOYMENT_REACT_FRONTEND.md  DJANGO_SHELL.md  ENV_FILES.md  HOW_TO.md  SEEDING_DATA.md
shows/: admin.py  apps.py  models.py  seeds.json  serializers.py  urls.py  views.py
shows/migrations/: 0001_initial.py  0002_remove_show_album_name_remove_show_artist_and_more.py
